--- a/package.json
+++ b/package.json
@@ -18,13 +18,17 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
+    "angular-ng-autocomplete": "^2.0.12",
+    "ng-auto-complete": "^5.0.3",
+    "ngx-angular-autocomplete": "^1.0.7",
+    "rut-chileno": "^1.1.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.1.6",
-    "@angular/cli": "~15.1.6",
+    "@angular/cli": "^15.1.6",
     "@angular/compiler-cli": "^15.1.0",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.5.0",
